# bupt_dog_controller2

./: .clang-format  .gitignore  CMakeLists.txt  ReadMe.md  main.cpp
config/: policy_1.pt  real_es_config.yaml  robot.urdf  robot_1.pt  sim_es_config.yaml
include/FSM/: fsm.hpp  fsm_enum.hpp  fsm_state.hpp  state_bridge_slow_trot.hpp  state_bridge_trot.hpp  state_fixed_down.hpp  state_fixed_stand.hpp  state_free_stand.hpp  state_passive.hpp  state_trot.hpp
include/common/: ctrl_components.hpp  estimator.hpp  low_cmd.hpp  low_state.hpp  robot.hpp  safety_param.hpp
include/control/mpc/: centroidal_force_mapper.hpp  mpc_controller.hpp  mpc_controller2.hpp  mpc_param.hpp  mpc_solver.hpp  mrt_generator.hpp
include/control/rl/: rl_controller.hpp
include/control/vmc/: vmc_controller.hpp
include/control/wbc/: dense_qp_solver.hpp  wbc_controller.hpp  wbc_optimizer.hpp
include/control/wbc/task/: wbc_task.hpp  wbc_task_body_orientation.hpp  wbc_task_body_pos.hpp  wbc_task_foot_pos.hpp
include/doglcm/: EstimatorData_t.hpp  EstimatorData_t.java  EstimatorData_t.py  ImuData_t.hpp  ImuData_t.java  ImuData_t.py  JointCmd_t.hpp  JointCmd_t.java  JointCmd_t.py  JointData_t.hpp  JointData_t.java  JointData_t.py  LegCmd_t.hpp  LegCmd_t.java  LegCmd_t.py  LegData_t.hpp  LegData_t.java  LegData_t.py  MpcOutput_t.hpp  MpcOutput_t.java  MpcOutput_t.py  UserCmd_t.hpp  UserCmd_t.java  UserCmd_t.py  __init__.py
include/gait/: enum_gait.hpp  gait.hpp  wave_generator.hpp
include/utils/: math_tools.hpp  math_types.hpp  real_time.hpp  timer.hpp
src/FSM/: fsm.cpp  state_bridge_slow_trot.cpp  state_bridge_trot.cpp  state_fixed_down.cpp  state_fixed_stand.cpp  state_free_stand.cpp  state_passive.cpp  state_trot.cpp
src/common/: estimator.cpp  robot.cpp
src/control/mpc/: centroidal_force_mapper.cpp  mpc_controller.cpp  mpc_controller2.cpp  mrt_generator.cpp
src/control/rl/: rl_controller.cpp
src/control/vmc/: vmc_controller.cpp
src/control/wbc/: dense_qp_solver.cpp  wbc_controller.cpp  wbc_optimizer.cpp
src/gait/: gait.cpp
